# cpp-game-of-life

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  config.h.in
.circleci/: config.yml
.github/workflows/: cmake.yml
include/: life.hpp
include/GOL/: cell.hpp  life.hpp  rules.hpp  world.hpp
lib/: CMakeLists.txt  life.cpp  life.test.cpp
lib/GOL/: cell.cpp  cell.test.cpp  life.cpp  life.test.cpp  rules.cpp  rules.test.cpp  world.cpp  world.test.cpp
src/: CMakeLists.txt  main.cpp
tst/: CMakeLists.txt  main_test.cpp
